--- a/src/core/css/main.css
+++ b/src/core/css/main.css
@@ -1018,3 +1018,47 @@ background-repeat: no-repeat;
 	-webkit-transition: opacity .3s; /* Safari */
   transition: opacity .3s;
 }
+
+/*  dialog  */
+.dialog_box{
+	position: fixed;
+	top:-400px;
+	left:50%;
+	margin-left: -200px;
+	padding:20px;
+	display:inline-block;
+	width:400px;
+	background:#fff;
+	border:1px solid #ccc;
+	border-width: 0 1px 1px;
+	border-bottom-left-radius:4px;
+  border-bottom-right-radius:4px;
+	font-size:0.7em;
+  font-weight:300;
+	line-height:120%;
+	box-shadow: 0px 10px 68px -20px rgba(0,0,0,1);
+}
+
+.dialog_info{
+	padding-bottom:10px;
+}
+
+.dbtns{
+	text-align: right;
+}
+
+.nosave{
+	float:left;
+}
+
+.cancel, .save{
+	margin-left:10px;
+}
+
+.dbtn{
+	padding:5px 10px;
+	border-radius:4px;
+	border:1px solid #ccc;
+	display:inline-block;
+	cursor: pointer;
+}
